Updating README.md, JAR file