@@ -1,5 +1,11 @@
 # pep2-hf
 A beágyazott rendszerek szoftvertechnológiája tárgy beadandó házifeladata
+
+## Futtatás
+java --module-path ${JAVAFX_LIB_ÚTVONAL} --add-modules
+javafx.controls,javafx.fxml,javafx.graphics,javafx.web -jar Reversi.jar
+
+
 ## Környezet beállítása
 ### JavaFx
 SDK letöltése innen: https://gluonhq.com/products/javafx/
